# tauri-plugin-network-information

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts
android/src/androidTest/java/: ConnectionInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Connection.kt  NetworkInformationPlugin.kt
android/src/test/java/: ConnectionUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json  mobile.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/tauri-plugin-network-information/: NetworkInformationPlugin.swift
ios/tauri-plugin-network-information.xcodeproj/: project.pbxproj
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: connection.toml  is_online.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
