[package]
name = "tauri-plugin-network-information"
version = "0.1.0"
authors = ["wtto00 <wtto00@outlook.com>"]
description = "A plugin for tauri@v2 to implement get network information on iOS and Android."
license = "MIT"
repository = "https://github.com/wtto00/tauri-plugin-network-information.git"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-network-information"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
serde_repr = "0.1"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
